# python-project-52

./: Dockerfile  Makefile  README.md  build.sh  db.sqlite3  docker-compose.yml  pyproject.toml  setup.cfg
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: __init__.py  error_handler.py  mixins.py  settings.py  urls.py  utils.py  view.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/labels/templates/labels/: create.html  delete.html  labels.html  update.html
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/migrations/: 0001_initial.py  0002_remove_statusmodel_user_id.py  0003_alter_statusmodel_name.py  0004_alter_statusmodel_name.py
task_manager/tasks/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_tasksmodel_executor_id.py  0003_alter_tasksmodel_status_id.py  0004_tasksmodel_label_id_alter_tasksmodel_author_id_and_more.py  0005_remove_tasksmodel_label_id_tasksmodel_label_id.py  0006_rename_label_id_tasksmodel_label.py  0007_rename_label_tasksmodel_labels.py  0008_rename_author_id_tasksmodel_author_and_more.py
task_manager/templates/: base.html  base_form.html  delete.html  edit.html  error.html  header.html  index.html  login.html
task_manager/templates/statuses/: index.html
task_manager/templates/users/: create.html  delete.html  users.html
task_manager/users/: forms.py  tests.py  urls.py  views.py
(+14 files in other folders)
