[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Aliev Nurlan <nualiev420@gmail.com>"]
readme = "README.md"
packages = [{include = "task_manager"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
python-dotenv = "^1.0.0"
dj-database-url = "^2.0.0"
django-bootstrap4 = "^23.1"
psycopg2-binary = "^2.9.6"
flake8 = "^6.0.0"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
